--- a/Lab3/Lab3.Web/Lab2.Web/Views/Shared/_Layout.cshtml
+++ b/Lab3/Lab3.Web/Lab2.Web/Views/Shared/_Layout.cshtml
@@ -27,6 +27,7 @@
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
+    @Scripts.Render("~/bundles/sweetalert")
     @Scripts.Render("~/bundles/main")
     @RenderSection("scripts", required: false)
 </body>
