Lab5: Last fix.

--- a/Lab5/Lab3.Web/Lab2.Web/Views/Home/Index.cshtml
+++ b/Lab5/Lab3.Web/Lab2.Web/Views/Home/Index.cshtml
@@ -49,8 +49,8 @@
 
             <div class="row">
                 <div class="col-md-6">
-                    <button class="btn btn-info" id="signButton">Create signature</button>
-                    <button class="btn btn-info" id="saveButton">Save signature</button>
+                    <button class="btn btn-info" id="signButton" type="button">Create signature</button>
+                    <button class="btn btn-info" id="saveButton" type="button">Save signature</button>
                 </div>
             </div>
             
@@ -67,7 +67,7 @@
 
             <div class="row">
                 <div class="col-md-12">
-                    <button class="btn btn-info" id="checkButton">Check signature</button>
+                    <button class="btn btn-info" id="checkButton" type="button">Check signature</button>
                 </div>
             </div>
 
